--- a/style.css
+++ b/style.css
@@ -1,1 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
+* {
+    font-family: 'Ubuntu';
+}
+body {
+    background-color: rgb(49, 49, 49);
+    margin: 0px 0px 10px 0px;
+}
+div.header {
+    align-items: center;
+}
+img.bot-logo {
+    width: 150px;
+    padding: 70px 10px 10px 10px;
+    margin: auto;
+    display: block;
+}
+h1.name {
+    color: #BA7DEB;
+    font-weight: 700;
+    font-size: 70px;
+    text-align: center;
+    margin: 0px 0px 10px 0px;
+    padding: 10px;
+}
+button.invite {
+    padding: 10px;
+    background-color: #BA7DEB;
+    margin: auto;
+    display: block;
+    font-size: 19px;
+}
+div.info {
+    text-align: center;
+}
+h1.about {
+    color:rgb(250, 240, 255);
+    padding: 10px;
+    text-align: center;
+    font-size: 40px;
+}
+p.about {
+    color:rgb(250, 240, 255);
+    padding: 0px 10px 0px 10px;
+    text-align: center;
+    font-size: 20px;
+}
+hr {
+    border: 1px solid rgb(63, 63, 63);
+    margin: 30px 400px 0px 400px;
+}
+a.cmd {
+    color: #BA7DEB;
+    font-size: 19px;
+}
+a.add {
+    text-decoration: none;
+}
